# carve-bench

./: .gitignore  README.md  RESULTS.md  run.mjs
.github/workflows/: smoke.yml
corpus/: large.crv  medium.crv  small.crv
engines/js/: bench.mjs  package-lock.json  package.json
engines/php/: bench.php
engines/rs/: Cargo.toml
engines/rs/src/: main.rs
scripts/: gen-corpus.mjs
